Fix: fix img.aligncenter

--- a/assets/scss/common/_utils.scss
+++ b/assets/scss/common/_utils.scss
@@ -47,6 +47,7 @@
 
   &left,
   &right,
+  &center,
   &none {
     display: block;
     margin: 0.25em;
